shared/fmod/fmodex.odin

	FMOD_EventQueue_SetPaused :: proc(eventqueue: ^FMOD_EVENTQUEUE, paused: i32) -> FMOD_RESULT ---
	FMOD_EventQueue_GetPaused :: proc(eventqueue: ^FMOD_EVENTQUEUE, paused: ^i32) -> FMOD_RESULT ---
	FMOD_EventQueue_IncludeDuckingCategory :: proc(eventqueue: ^FMOD_EVENTQUEUE, category: ^FMOD_EVENTCATEGORY, ducked_volume: f32, unducked_volume: f32, duck_time: u32, unduck_time: u32) -> FMOD_RESULT ---
	FMOD_EventQueue_ExcludeDuckingCategory :: proc(eventqueue: ^FMOD_EVENTQUEUE, category: ^FMOD_EVENTCATEGORY) -> FMOD_RESULT ---
	FMOD_EventQueue_SetCallback :: proc(eventqueue: ^FMOD_EVENTQUEUE, callback: FMOD_EVENTQUEUE_CALLBACK, callbackuserdata: rawptr) -> FMOD_RESULT ---
	FMOD_EventQueue_SetUserData :: proc(eventqueue: ^FMOD_EVENTQUEUE, userdata: rawptr) -> FMOD_RESULT ---
	FMOD_EventQueue_GetUserData :: proc(eventqueue: ^FMOD_EVENTQUEUE, userdata: ^rawptr) -> FMOD_RESULT ---
	FMOD_EventQueue_Dump :: proc(eventqueue: ^FMOD_EVENTQUEUE) -> FMOD_RESULT ---
	FMOD_EventQueue_GetMemoryInfo :: proc(eventqueue: ^FMOD_EVENTQUEUE, memorybits: u32, event_memorybits: u32, memoryused: ^u32, memoryused_details: ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_Release :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_GetInfoOnlyEvent :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, infoonlyevent: ^^FMOD_EVENT) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_GetRealEvent :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, realevent: ^^FMOD_EVENT) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_SetPriority :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, priority: u8) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_GetPriority :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, priority: ^u8) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_SetExpiryTime :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, expirytime: u32) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_GetExpiryTime :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, expirytime: ^u32) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_SetDelayTime :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, delay: u32) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_GetDelayTime :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, delay: ^u32) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_SetInterrupt :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, interrupt: i32) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_GetInterrupt :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, interrupt: ^i32) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_SetCrossfadeTime :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, crossfade: i32) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_GetCrossfadeTime :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, crossfade: ^i32) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_SetUserData :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, userdata: rawptr) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_GetUserData :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, userdata: ^rawptr) -> FMOD_RESULT ---
	FMOD_EventQueueEntry_GetMemoryInfo :: proc(eventqueueentry: ^FMOD_EVENTQUEUEENTRY, memorybits: u32, event_memorybits: u32, memoryused: ^u32, memoryused_details: ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---
	FMOD_MusicSystem_Reset :: proc(musicsystem: ^FMOD_MUSICSYSTEM) -> FMOD_RESULT ---
	FMOD_MusicSystem_SetVolume :: proc(musicsystem: ^FMOD_MUSICSYSTEM, volume: f32) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetVolume :: proc(musicsystem: ^FMOD_MUSICSYSTEM, volume: ^f32) -> FMOD_RESULT ---
	FMOD_MusicSystem_SetReverbProperties :: proc(musicsystem: ^FMOD_MUSICSYSTEM, props: ^FMOD_REVERB_CHANNELPROPERTIES) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetReverbProperties :: proc(musicsystem: ^FMOD_MUSICSYSTEM, props: ^FMOD_REVERB_CHANNELPROPERTIES) -> FMOD_RESULT ---
	FMOD_MusicSystem_SetPaused :: proc(musicsystem: ^FMOD_MUSICSYSTEM, paused: i32) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetPaused :: proc(musicsystem: ^FMOD_MUSICSYSTEM, paused: ^i32) -> FMOD_RESULT ---
	FMOD_MusicSystem_SetMute :: proc(musicsystem: ^FMOD_MUSICSYSTEM, mute: i32) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetMute :: proc(musicsystem: ^FMOD_MUSICSYSTEM, mute: ^i32) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetInfo :: proc(musicsystem: ^FMOD_MUSICSYSTEM, info: ^FMOD_MUSIC_INFO) -> FMOD_RESULT ---
	FMOD_MusicSystem_PromptCue :: proc(musicsystem: ^FMOD_MUSICSYSTEM, id: u32) -> FMOD_RESULT ---
	FMOD_MusicSystem_PrepareCue :: proc(musicsystem: ^FMOD_MUSICSYSTEM, id: u32, prompt: ^^FMOD_MUSICPROMPT) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetParameterValue :: proc(musicsystem: ^FMOD_MUSICSYSTEM, id: u32, parameter: ^f32) -> FMOD_RESULT ---
	FMOD_MusicSystem_SetParameterValue :: proc(musicsystem: ^FMOD_MUSICSYSTEM, id: u32, parameter: f32) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetCues :: proc(musicsystem: ^FMOD_MUSICSYSTEM, it: ^FMOD_MUSIC_ITERATOR, filter: cstring) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetNextCue :: proc(musicsystem: ^FMOD_MUSICSYSTEM, it: ^FMOD_MUSIC_ITERATOR) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetParameters :: proc(musicsystem: ^FMOD_MUSICSYSTEM, it: ^FMOD_MUSIC_ITERATOR, filter: cstring) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetNextParameter :: proc(musicsystem: ^FMOD_MUSICSYSTEM, it: ^FMOD_MUSIC_ITERATOR) -> FMOD_RESULT ---
	FMOD_MusicSystem_LoadSoundData :: proc(musicsystem: ^FMOD_MUSICSYSTEM, resource: FMOD_EVENT_RESOURCE, mode: u32) -> FMOD_RESULT ---
	FMOD_MusicSystem_FreeSoundData :: proc(musicsystem: ^FMOD_MUSICSYSTEM, waituntilready: i32) -> FMOD_RESULT ---
	FMOD_MusicSystem_SetCallback :: proc(musicsystem: ^FMOD_MUSICSYSTEM, callback: FMOD_MUSIC_CALLBACK, userdata: rawptr) -> FMOD_RESULT ---
	FMOD_MusicSystem_GetMemoryInfo :: proc(musicsystem: ^FMOD_MUSICSYSTEM, memorybits: u32, event_memorybits: u32, memoryused: ^u32, memoryused_details: ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---
	FMOD_MusicPrompt_Release :: proc(musicprompt: ^FMOD_MUSICPROMPT) -> FMOD_RESULT ---
	FMOD_MusicPrompt_Begin :: proc(musicprompt: ^FMOD_MUSICPROMPT) -> FMOD_RESULT ---
	FMOD_MusicPrompt_End :: proc(musicprompt: ^FMOD_MUSICPROMPT) -> FMOD_RESULT ---
	FMOD_MusicPrompt_IsActive :: proc(musicprompt: ^FMOD_MUSICPROMPT, active: ^i32) -> FMOD_RESULT ---
	FMOD_MusicPrompt_GetMemoryInfo :: proc(musicprompt: ^FMOD_MUSICPROMPT, memorybits: u32, event_memorybits: u32, memoryused: ^u32, memoryused_details: ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---
	FMOD_NetEventSystem_Init :: proc(eventsystem: ^FMOD_EVENTSYSTEM, port: u16) -> FMOD_RESULT ---
	FMOD_NetEventSystem_Update :: proc() -> FMOD_RESULT ---
	FMOD_NetEventSystem_Shutdown :: proc() -> FMOD_RESULT ---
	FMOD_NetEventSystem_GetVersion :: proc(version: ^u32) -> FMOD_RESULT ---
	FMOD_ErrorString :: proc(errcode: FMOD_RESULT) -> cstring ---
}
